feat(content): add newtab background
If bg file not found, falls back to circular gradient pattern

--- a/userContent.css
+++ b/userContent.css
@@ -1,1 +1,17 @@
 @import url(variables.css);
+
+/* ----------------------------- Newtab related ----------------------------- */
+@-moz-document url-prefix(about:home), url-prefix(about:newtab) {
+
+    /*
+    - Add background image with gradient fallback
+    */
+    body {
+        background:
+            var(--CUSTOM-NEWTAB-URL-BGIMAGE),
+            radial-gradient(ellipse, var(--CUSTOM-NEWTAB-COLOR-FALLBACK-BG1) 20%, var(--CUSTOM-NEWTAB-COLOR-FALLBACK-BG2)) !important;
+        background-size: cover !important;
+        background-repeat: no-repeat !important;
+        background-attachment: fixed !important;
+    }
+}
