--- a/variables.css
+++ b/variables.css
@@ -9,4 +9,6 @@
     --CUSTOM-NEWTAB-URL-BGIMAGE: url('./images/NewtabBackground.png');
     --CUSTOM-NEWTAB-COLOR-FALLBACK-BG1: var(--CUSTOM-CHROME-COLOR-MAIN-BG);
     --CUSTOM-NEWTAB-COLOR-FALLBACK-BG2: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
+    --CUSTOM-NEWTAB-COLOR-SHORTS-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
+    --CUSTOM-NEWTAB-COLOR-SHORTS-TEXT: var(--CUSTOM-CHROME-COLOR-TAB-TEXT);
 }
