--- a/variables.css
+++ b/variables.css
@@ -11,4 +11,6 @@
     --CUSTOM-NEWTAB-COLOR-FALLBACK-BG2: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
     --CUSTOM-NEWTAB-COLOR-SHORTS-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
     --CUSTOM-NEWTAB-COLOR-SHORTS-TEXT: var(--CUSTOM-CHROME-COLOR-TAB-TEXT);
+    --CUSTOM-NEWTAB-COLOR-CONTEXT-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
+    --CUSTOM-NEWTAB-COLOR-CONTEXT-HOVER-BG: color-mix(in srgb, var(--CUSTOM-NEWTAB-COLOR-CONTEXT-HOVER-BG) 70%, black);
 }
