feat(content): change about page colors
For now, only the about:preference page is used as reference.

--- a/userContent.css
+++ b/userContent.css
@@ -1,6 +1,69 @@
 @import url(variables.css);
 
-/* ----------------------------- Newtab related ----------------------------- */
+/* ---------------------------- General ---------------------------- */
+@-moz-document url-prefix(about:) {
+
+    :root {
+        /* Sidebar */
+        --background-color-canvas: var(--CUSTOM-ABOUT-COLOR-SIDEBAR-BG) !important;
+        --color-accent-primary: var(--CUSTOM-ABOUT-COLOR-SIDEBAR-BUTTON-TEXT) !important;
+        --color-accent-primary-active: var(--CUSTOM-ABOUT-COLOR-SIDEBAR-BUTTON-TEXT) !important;
+        --in-content-button-background-active: color-mix(in srgb, var(--CUSTOM-ABOUT-COLOR-SIDEBAR-BUTTON-TEXT) 21%, transparent) !important;
+        
+        /* Content text */
+        --in-content-page-color: var(--CUSTOM-ABOUT-COLOR-CONTENT-TEXT) !important;
+        --button-text-color: var(--CUSTOM-ABOUT-COLOR-CONTENT-TEXT) !important;
+        ---in-content-button-background-active: var(--CUSTOM-ABOUT-COLOR-SIDEBAR-BUTTON-TEXT) !important;
+
+        /* Input boxes */
+        --background-color-box: var(--CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG) !important;
+        --in-content-box-info-background: var(--CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG) !important;
+        --in-content-box-border-color: hsl(from var(--CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG) h s calc(l - 45)) !important;
+
+        /* FF link buttons */
+        --in-content-primary-button-background: var(--CUSTOM-ABOUT-COLOR-BUTTON-FF-BG) !important;
+        --in-content-primary-button-background-hover: hsl(from var(--CUSTOM-ABOUT-COLOR-BUTTON-FF-BG) calc(h + 10) s l) !important;
+        --in-content-primary-button-background-active: hsl(from var(--CUSTOM-ABOUT-COLOR-BUTTON-FF-BG) calc(h + 10) s l) !important;
+    }
+
+    :root,
+    :root * {
+        /* Dropdown options */
+        --in-content-item-selected: var(--CUSTOM-ABOUT-COLOR-CONTENT-DROPDOWN-SELECTED) !important;
+        --in-content-item-hover: var(--CUSTOM-ABOUT-COLOR-CONTENT-DROPDOWN-HOVER) !important;
+    }
+}
+
+/* ----------------------------- Preferences ----------------------------- */
+@-moz-document url-prefix(about:preferences) {
+
+    /*
+    - Change content to a different color than the sidebar
+    (Highest content containers)
+    */
+    vbox.main-content,
+    hbox.sticky-container {
+        background: var(--CUSTOM-ABOUT-COLOR-CONTENT-BG) !important;
+    }
+
+    /*
+    - Add division between sidebar and content
+    (Highest sidebar container)
+    */
+    vbox.navigation {
+        border-right: 1px solid black !important;
+    }
+
+    /*
+    - Change cursor to pointer
+    (Blue buttons used to direct to other urls)
+    */
+    .primary.small-button {
+        cursor: pointer !important;
+    }
+}
+
+/* ----------------------------- Newtab ----------------------------- */
 @-moz-document url-prefix(about:home), url-prefix(about:newtab) {
 
     /*
