--- a/variables.css
+++ b/variables.css
@@ -1,16 +1,28 @@
 :root {
-    /* Chrome related */
+    /* Chrome */
     --CUSTOM-CHROME-COLOR-MAIN-BG: #4D4D4D !important;
     --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #2B2B2B !important;
     --CUSTOM-CHROME-COLOR-SEARCHBAR-BG: #0A0A0A !important;
     --CUSTOM-CHROME-COLOR-TAB-TEXT: #FFFFFF !important;
 
-    /* Newtab related */
+    /* Content - Newtab */
     --CUSTOM-NEWTAB-URL-BGIMAGE: url('./images/NewtabBackground.png');
     --CUSTOM-NEWTAB-COLOR-FALLBACK-BG1: var(--CUSTOM-CHROME-COLOR-MAIN-BG);
     --CUSTOM-NEWTAB-COLOR-FALLBACK-BG2: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
     --CUSTOM-NEWTAB-COLOR-SHORTS-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
     --CUSTOM-NEWTAB-COLOR-SHORTS-TEXT: var(--CUSTOM-CHROME-COLOR-TAB-TEXT);
     --CUSTOM-NEWTAB-COLOR-CONTEXT-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
-    --CUSTOM-NEWTAB-COLOR-CONTEXT-HOVER-BG: color-mix(in srgb, var(--CUSTOM-NEWTAB-COLOR-CONTEXT-HOVER-BG) 70%, black);
+    --CUSTOM-NEWTAB-COLOR-CONTEXT-HOVER-BG: hsl(from var(--CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG) h s calc(l + 15));
+
+    /* Content - About */
+    --CUSTOM-ABOUT-COLOR-SIDEBAR-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
+    --CUSTOM-ABOUT-COLOR-SIDEBAR-BUTTON-TEXT: #00d9ff;
+
+    --CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG: #222;
+    --CUSTOM-ABOUT-COLOR-CONTENT-TEXT: white;
+    --CUSTOM-ABOUT-COLOR-CONTENT-BG: hsl(from var(--CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG) h s calc(l + 8));
+    --CUSTOM-ABOUT-COLOR-CONTENT-DROPDOWN-SELECTED: hsl(from var(--CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG) h s calc(l + 20));
+    --CUSTOM-ABOUT-COLOR-CONTENT-DROPDOWN-HOVER: hsl(from var(--CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG) h s calc(l + 10));
+
+    --CUSTOM-ABOUT-COLOR-BUTTON-FF-BG: #00a2ff;
 }
