--- a/variables.css
+++ b/variables.css
@@ -12,17 +12,26 @@
     --CUSTOM-NEWTAB-COLOR-SHORTS-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
     --CUSTOM-NEWTAB-COLOR-SHORTS-TEXT: var(--CUSTOM-CHROME-COLOR-TAB-TEXT);
     --CUSTOM-NEWTAB-COLOR-CONTEXT-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
-    --CUSTOM-NEWTAB-COLOR-CONTEXT-HOVER-BG: hsl(from var(--CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG) h s calc(l + 15));
+    --CUSTOM-NEWTAB-COLOR-CONTEXT-HOVER-BG: hsl(from var(--CUSTOM-NEWTAB-COLOR-POPUP-BOX-BG) h s calc(l + 15));
+    --CUSTOM-NEWTAB-COLOR-POPUP-OUTSIDE-BG: color-mix(in srgb, var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG) 60%, transparent);
+    --CUSTOM-NEWTAB-COLOR-POPUP-BG: var(--CUSTOM-NEWTAB-COLOR-CONTEXT-BG);
+    --CUSTOM-NEWTAB-COLOR-POPUP-BORDER: hsl(from var(--CUSTOM-NEWTAB-COLOR-POPUP-BG) h s calc(l + 14));
+    --CUSTOM-NEWTAB-COLOR-POPUP-BOX-BG: #222;
+    --CUSTOM-NEWTAB-COLOR-POPUP-BOX-BORDER: var(--CUSTOM-NEWTAB-COLOR-POPUP-BORDER);
+    --CUSTOM-NEWTAB-COLOR-POPUP-BOX-TEXT: var(--CUSTOM-CHROME-COLOR-TAB-TEXT);
+    --CUSTOM-NEWTAB-COLOR-POPUP-BOX-SELECT-BG: var(--CUSTOM-NEWTAB-COLOR-POPUP-BOX-BORDER);
+    --CUSTOM-NEWTAB-COLOR-POPUP-BOX-SELECT-TEXT: var(--CUSTOM-NEWTAB-COLOR-POPUP-BOX-TEXT);
+    --CUSTOM-NEWTAB-COLOR-POPUP-BUTTON-BG1: hsl(from var(--CUSTOM-NEWTAB-COLOR-POPUP-BOX-BG) h s calc(l + 20));
+    --CUSTOM-NEWTAB-COLOR-POPUP-BUTTON-BG2: #00d9ff;
+    --CUSTOM-NEWTAB-COLOR-POPUP-BUTTON-TEXT: var(--CUSTOM-CHROME-COLOR-TAB-TEXT);
 
     /* Content - About */
     --CUSTOM-ABOUT-COLOR-SIDEBAR-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
     --CUSTOM-ABOUT-COLOR-SIDEBAR-BUTTON-TEXT: #00d9ff;
-
     --CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG: #222;
     --CUSTOM-ABOUT-COLOR-CONTENT-TEXT: white;
     --CUSTOM-ABOUT-COLOR-CONTENT-BG: hsl(from var(--CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG) h s calc(l + 8));
     --CUSTOM-ABOUT-COLOR-CONTENT-DROPDOWN-SELECTED: hsl(from var(--CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG) h s calc(l + 20));
     --CUSTOM-ABOUT-COLOR-CONTENT-DROPDOWN-HOVER: hsl(from var(--CUSTOM-ABOUT-COLOR-CONTENT-BOX-BG) h s calc(l + 10));
-
     --CUSTOM-ABOUT-COLOR-BUTTON-FF-BG: #00a2ff;
 }
