--- a/variables.css
+++ b/variables.css
@@ -1,9 +1,9 @@
 :root {
     /* Chrome */
-    --CUSTOM-CHROME-COLOR-MAIN-BG: #4D4D4D !important;
-    --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #2B2B2B !important;
-    --CUSTOM-CHROME-COLOR-SEARCHBAR-BG: #0A0A0A !important;
-    --CUSTOM-CHROME-COLOR-TAB-TEXT: #FFFFFF !important;
+    --CUSTOM-CHROME-COLOR-MAIN-BG: #4D4D4D;
+    --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #2B2B2B;
+    --CUSTOM-CHROME-COLOR-SEARCHBAR-BG: #0A0A0A;
+    --CUSTOM-CHROME-COLOR-TAB-TEXT: #FFFFFF;
 
     /* Content - Newtab */
     --CUSTOM-NEWTAB-URL-BGIMAGE: url('./images/NewtabBackground.png');
@@ -11,6 +11,9 @@
     --CUSTOM-NEWTAB-COLOR-FALLBACK-BG2: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
     --CUSTOM-NEWTAB-COLOR-SHORTS-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
     --CUSTOM-NEWTAB-COLOR-SHORTS-TEXT: var(--CUSTOM-CHROME-COLOR-TAB-TEXT);
+    --CUSTOM-NEWTAB-SIZE-SHORTS-CONTAINER: 103px;
+    --CUSTOM-NEWTAB-SIZE-SHORTS-GAP: 14px;
+    --CUSTOM-NEWTAB-SIZE-SHORTS-ICON: 40px;
     --CUSTOM-NEWTAB-COLOR-CONTEXT-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
     --CUSTOM-NEWTAB-COLOR-CONTEXT-HOVER-BG: hsl(from var(--CUSTOM-NEWTAB-COLOR-POPUP-BOX-BG) h s calc(l + 15));
     --CUSTOM-NEWTAB-COLOR-POPUP-OUTSIDE-BG: color-mix(in srgb, var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG) 60%, transparent);
