fix(content): make newtab context text into a var

--- a/variables.css
+++ b/variables.css
@@ -16,6 +16,7 @@
     --CUSTOM-NEWTAB-SIZE-SHORTS-ICON: 40px;
     --CUSTOM-NEWTAB-COLOR-CONTEXT-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
     --CUSTOM-NEWTAB-COLOR-CONTEXT-HOVER-BG: hsl(from var(--CUSTOM-NEWTAB-COLOR-POPUP-BOX-BG) h s calc(l + 15));
+    --CUSTOM-NEWTAB-COLOR-CONTEXT-TEXT: var(--CUSTOM-CHROME-COLOR-TAB-TEXT);
     --CUSTOM-NEWTAB-COLOR-POPUP-OUTSIDE-BG: color-mix(in srgb, var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG) 60%, transparent);
     --CUSTOM-NEWTAB-COLOR-POPUP-BG: var(--CUSTOM-NEWTAB-COLOR-CONTEXT-BG);
     --CUSTOM-NEWTAB-COLOR-POPUP-BORDER: hsl(from var(--CUSTOM-NEWTAB-COLOR-POPUP-BG) h s calc(l + 14));
