--- a/userContent.css
+++ b/userContent.css
@@ -289,7 +289,7 @@
         margin-inline-start: 7px !important;
         border-radius: 20px !important;
         background: var(--CUSTOM-NEWTAB-COLOR-CONTEXT-BG) !important;
-        color: white !important;
+        color: var(--CUSTOM-NEWTAB-COLOR-CONTEXT-TEXT) !important;
         padding: 4px 9px !important;
     }
 
