--- a/variables.css
+++ b/variables.css
@@ -28,6 +28,11 @@
     --CUSTOM-NEWTAB-COLOR-POPUP-BUTTON-BG1: hsl(from var(--CUSTOM-NEWTAB-COLOR-POPUP-BOX-BG) h s calc(l + 20));
     --CUSTOM-NEWTAB-COLOR-POPUP-BUTTON-BG2: #00d9ff;
     --CUSTOM-NEWTAB-COLOR-POPUP-BUTTON-TEXT: var(--CUSTOM-CHROME-COLOR-TAB-TEXT);
+    --CUSTOM-NEWTAB-COLOR-SETTINGS-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
+    --CUSTOM-NEWTAB-COLOR-SETTINGS-TEXT: var(--CUSTOM-CHROME-COLOR-TAB-TEXT);
+    --CUSTOM-NEWTAB-COLOR-SETTINGS-SELECT-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
+
+
 
     /* Content - About */
     --CUSTOM-ABOUT-COLOR-SIDEBAR-BG: var(--CUSTOM-CHROME-COLOR-TOOLBAR-BG);
