fix(content): update newtab shorts clickable area

--- a/userContent.css
+++ b/userContent.css
@@ -229,6 +229,7 @@
         border-radius: 23px !important;
         width: var(--CUSTOM-NEWTAB-SIZE-SHORTS-CONTAINER) !important;
         height: var(--CUSTOM-NEWTAB-SIZE-SHORTS-CONTAINER) !important;
+        overflow: hidden !important;
     }
 
     /*
