--- a/variables.css
+++ b/variables.css
@@ -2,8 +2,17 @@
     /* Chrome */
     --CUSTOM-CHROME-COLOR-MAIN-BG: #4D4D4D;
     --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #2B2B2B;
-    --CUSTOM-CHROME-COLOR-SEARCHBAR-BG: #0A0A0A;
+    --CUSTOM-CHROME-COLOR-SEARCHBAR-BG: #111;
     --CUSTOM-CHROME-COLOR-TAB-TEXT: #FFFFFF;
+
+    /* Chrome - Urlbar */
+    --CUSTOM-CHROME-COLOR-URLBAR-BG: #141414;
+    --CUSTOM-CHROME-COLOR-URLBAR-TEXT: #FFF;
+    --CUSTOM-CHROME-COLOR-URLBAR-LINK-TEXT: #00d9ff;
+    --CUSTOM-CHROME-COLOR-URLBAR-HOVER-BG: #313131;
+    --CUSTOM-CHROME-COLOR-URLBAR-SELECT-BG: #0085ff;
+    --CUSTOM-CHROME-COLOR-URLBAR-SELECT-TEXT: #FFF;
+    --CUSTOM-CHROME-COLOR-URLBAR-OUTLINE: #00d9ff;
 
     /* Content - Newtab */
     --CUSTOM-NEWTAB-URL-BGIMAGE: url('./images/NewtabBackground.png');
